# commander

./: .gitignore  Cargo.toml  README.md  commander.toml
autoresearch/: program.md  results.tsv  run.sh
crates/commander-agents/: Cargo.toml
crates/commander-agents/src/: artifact.rs  execution.rs  lib.rs  profile.rs
crates/commander-cli/: Cargo.toml
crates/commander-cli/src/: config.rs  db.rs  main.rs
crates/commander-cli/src/commands/: agent_worker.rs  init.rs  mod.rs  run.rs  status.rs  task.rs
crates/commander-concurrency/: Cargo.toml
crates/commander-concurrency/src/: key.rs  lib.rs  policy.rs  slot.rs
crates/commander-coordination/: Cargo.toml
crates/commander-coordination/src/: boundary_guard.rs  lib.rs  orchestrator.rs  validation.rs
crates/commander-hooks/: Cargo.toml
crates/commander-hooks/src/: event.rs  io.rs  lib.rs  runner.rs
crates/commander-ipc/: Cargo.toml
crates/commander-ipc/src/: bus.rs  contract.rs  lib.rs  message.rs  reservation.rs
crates/commander-mcp/: Cargo.toml
crates/commander-mcp/src/: client.rs  config.rs  lib.rs  manager.rs  tool.rs
crates/commander-messages/: Cargo.toml
crates/commander-messages/src/: compaction.rs  lib.rs  message.rs  transcript.rs
crates/commander-permissions/: Cargo.toml
crates/commander-permissions/src/: engine.rs  lib.rs  mode.rs  rule.rs
crates/commander-runtime/: Cargo.toml
crates/commander-runtime/src/: adapter.rs  agent_loop.rs  circuit_breaker.rs  lib.rs  observer.rs  session.rs
crates/commander-runtime/src/adapters/: anthropic.rs  codex.rs  mod.rs  openai.rs  openrouter.rs
crates/commander-scheduler/: Cargo.toml
crates/commander-scheduler/src/: durable.rs  event_log.rs  lib.rs  retry.rs  state_machine.rs
crates/commander-supervisor/: Cargo.toml
crates/commander-supervisor/src/: handle.rs  lib.rs  singleton.rs  spawner.rs
crates/commander-tasks/: Cargo.toml
crates/commander-tasks/src/: dependency.rs  lib.rs  queue.rs  task.rs
crates/commander-tools/: Cargo.toml
crates/commander-tools/src/: batch.rs  lib.rs  path_guard.rs  registry.rs  tool.rs
crates/commander-tools/src/builtin/: bash.rs  complete_task.rs  mod.rs  read.rs  write.rs
docs/superpowers/specs/: 2026-04-02-autoresearch-loop-design.md  2026-04-02-benchmark-framework-strategy.md
prototype/: index.html  package-lock.json  package.json
prototype/src/: App.module.css  App.tsx  index.css  types.ts
prototype/src/components/chat/: Chat.module.css  Chat.tsx  InputBar.module.css  InputBar.tsx  MentionDropdown.module.css  MentionDropdown.tsx  MessageItem.module.css  MessageItem.tsx
prototype/src/components/detail/: AgentSession.module.css  AgentSession.tsx  DetailZone.module.css  DetailZone.tsx  TaskView.module.css  TaskView.tsx  TranscriptEntry.module.css  TranscriptEntry.tsx  WorkspaceDashboard.module.css  WorkspaceDashboard.tsx
prototype/src/components/sidebar/: RepoItem.module.css  RepoItem.tsx  Sidebar.module.css  Sidebar.tsx
prototype/src/mock/: data.ts  simulator.ts
prototype/src/store/: chat.ts  workspace.ts
