[package]
name = "commander-agents"
edition.workspace = true
version.workspace = true

[dependencies]
commander-messages = { path = "../commander-messages" }
commander-tasks = { path = "../commander-tasks" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
