[package]
name = "commander-ipc"
edition.workspace = true
version.workspace = true

[dependencies]
commander-messages = { path = "../commander-messages" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
glob.workspace = true
