[package]
name = "commander-permissions"
edition.workspace = true
version.workspace = true

[dependencies]
commander-messages = { path = "../commander-messages" }
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
