[package]
name = "commander-runtime"
edition.workspace = true
version.workspace = true

[dependencies]
commander-messages = { path = "../commander-messages" }
commander-permissions = { path = "../commander-permissions" }
commander-hooks = { path = "../commander-hooks" }
commander-tools = { path = "../commander-tools" }
commander-mcp = { path = "../commander-mcp" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
