[package]
name = "commander-tools"
edition.workspace = true
version.workspace = true

[dependencies]
commander-messages = { path = "../commander-messages" }
commander-permissions = { path = "../commander-permissions" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
glob.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-util.workspace = true
